# akypuera

./: .gitignore  .gitmodules  CMakeLists.txt  FindTAU.cmake  INSTALL  INSTALL.md  README  README.md  cuia.c
cmake/: FindOTF.cmake  FindOTF2.cmake  FindSMPI.cmake  FindTAU.cmake
examples/: CMakeLists.txt  fortran.f  prog.c  scatter.c  small.c
examples/collective/src/: coll.c
examples/collective/traces/: rastro-0-0.rst  rastro-1-0.rst  rastro-2-0.rst  rastro-3-0.rst
examples/prog/src/: prog.c
examples/prog/traces/: rastro-0-0.rst
examples/ring/src/: ring.c
examples/ring/traces/: rastro-0-0.rst  rastro-1-0.rst  rastro-2-0.rst
examples/scatter/traces/: rastro-0-0.rst  rastro-1-0.rst  rastro-2-0.rst  rastro-3-0.rst
examples/small/traces/: rastro-0-0.rst  rastro-1-0.rst
examples/smpi_bug/src/: smpi_bug.c
examples/smpi_bug/traces/: rastro-0-0.rst  rastro-1-0.rst  rastro-2-0.rst
examples/smpi_traced/src/: smpi_traced.c
examples/smpi_traced/traces/: rastro-0-0.rst  rastro-1-0.rst  rastro-2-0.rst
include/: aky.h  aky_config.h.in  aky_rastro.h  cuia.h
libRastro/: AUTHORS  CMakeLists.txt  INSTALL  README
libRastro/examples/: CMakeLists.txt  rastro_read_example.c  rastro_write_example.c  saida.h
libRastro/examples/fortran/: Makefile  rst_fort.f90  rst_functions.dsc
libRastro/include/: list.h  rastro.h  rastro_config.h.in  rastro_list.h  rastro_write_functions.h
libRastro/include/timesync/: rastro_timesync_f.h
libRastro/scripts/: CMakeLists.txt  rastro_function.sh  rastro_get_names.sh  rastro_names.sh
libRastro/src/: CMakeLists.txt  config.h  list.c  rastro_generate.c  rastro_list.c  rastro_private.h  rastro_public.h  rastro_read.c  rastro_timesync.c  rastro_timesync_f.c  rastro_timesync_f.h  rastro_write.c  rastro_write_functions.c  rastro_write_functions.h
libRastro/src/generate/: rastro_generate.c
libRastro/src/timesync/: rastro_timesync_f.c
libpoti/: CMakeLists.txt  README.md
libpoti/examples/: CMakeLists.txt  README  ex1.c  main_example.c  vite-1.2.c  vite-svn.c
libpoti/include/: poti.h  poti_config.h.in
libpoti/pkgconfig/: CMakeLists.txt  poti.pc.cmake
libpoti/src/: poti.c  poti_events.c  poti_header.c  poti_private.h
librastro/: AUTHORS  CMakeLists.txt  README  README.md
librastro/examples/: CMakeLists.txt  auto-generated.c  auto-generated.h  rastro_read_example.c  rastro_write_example.c  saida.c  saida.h  write1.c  write2.c
librastro/include/: rastro.h  rastro_config.h.in  rastro_list.h
librastro/src/: rastro_list.c  rastro_private.h  rastro_read.c  rastro_write.c  rst_generate.c  rst_private.h  rst_read.c  rst_write.c
librastro/src/generate/: rastro_generate.c  rst_generate.c
librastro/src/read/: rastro_read.c  rst_read.c
librastro/src/timesync/: rastro_timesync.c  rst_timesync.c
src/: aky.c  aky_aux.c  aky_converter.c  aky_keys.c  aky_names.c  aky_paje.c  aky_private.h  aky_rastro.c  aky_utils.c  cuia.c  cuia_converter.c  cuia_paje.c  otf2paje.c  tau2paje.c
src/aky/: aky2paje.h  aky_arguments.c  aky_converter.c
src/otf/: otf2paje.c  otf2paje.h  otf2paje_arguments.c  otf2paje_handlers.c
src/otf2/: DevLog.org  otf22csv.c  otf22csv.h  otf22csv_arguments.c  otf22csv_handlers.c  otf22paje.c  otf22paje.h  otf22paje_arguments.c  otf22paje_handlers.c  otf22paje_hostfile.c  otf22paje_hostfile.h
src/otf2-omp-print/: otf2ompprint2paje.jl  otf2ompprint2paje.pl
src/tau/: tau2paje.c  tau2paje.h  tau2paje_arguments.c  tau2paje_handlers.c
tests/: collective.tesh  prog.tesh  ring.tesh  scatter.tesh  small.tesh  smpi_bug.tesh  smpi_traced.tesh
