cmake_minimum_required(VERSION 2.8)
if(POLICY CMP0015)
  cmake_policy(SET CMP0015 NEW)
endif(POLICY CMP0015)

link_directories (../)

IF(SMPI)
  FIND_PACKAGE(SMPI REQUIRED)
  SET(CMAKE_C_COMPILER smpicc)
ELSE(SMPI)
  FIND_PACKAGE(MPI REQUIRED)
  SET(CMAKE_C_COMPILER mpicc)
ENDIF(SMPI)

add_executable(ring ring.c)
#add_executable(prog prog.c)
#add_executable(scatter scatter.c)
#add_executable(small small.c)
#add_executable(smpi_traced smpi_traced.c)
#add_executable(smpi_bug smpi_bug.c)
target_link_libraries(ring aky)
#target_link_libraries(prog aky)
#target_link_libraries(scatter aky)
#target_link_libraries(small aky)
#target_link_libraries(smpi_traced aky)
#target_link_libraries(smpi_bug aky)
